tests/A2/accept/functionHiding.ul
int foo(int foo){
    return foo;
}

void main(){
    
}