tests/A2/reject/badAdd.ul
void main(){
    boolean b;
    boolean b2;
    b2+b2;
}